beeai/openshift/deployment-backport-agent-c9s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backport-agent-c9s
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backport-agent-c9s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backport-agent-c9s
        deployment: backport-agent-c9s
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-30-34-89.us-east-1.compute.internal
      containers:
      - args:
        - agents/backport_agent.py
        command:
        - /usr/bin/python
        image: 'beeai-agent:c9s'
        imagePullPolicy: Always
        name: backport-agent-c9s
        ports:
        - containerPort: 8080
          protocol: TCP
        # TODO: add limits on cpu and memory.
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /git-repos
          name: mcp-server-git-repos
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      # TODO: this should be reset when we have enough data.
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mcp-server-git-repos
        persistentVolumeClaim:
          claimName: mcp-server-git-repos
