beeai/openshift/deployment-backport-agent.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backport-agent
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backport-agent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backport-agent
        deployment: backport-agent
    spec:
      containers:
      - args:
        - agents/backport_agent.py
        command:
        - /usr/bin/python
        image: 'image-registry.openshift-image-registry.svc:5000/jotnar-prod/beeai-agent@sha256:649cc82f9529d48c6f4f61654d87fee6e18155944054acfa074928e5e73844a8'
        imagePullPolicy: Always
        name: backport-agent
        ports:
        - containerPort: 8080
          protocol: TCP
        # TODO: add limits on cpu and memory.
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      # TODO: this should be reset when we have enough data.
      terminationGracePeriodSeconds: 30
