beeai/openshift/deployment-mcp-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-gateway
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mcp-server:prod"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mcp-gateway\")].image"}]'
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mcp-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mcp-gateway
        deployment: mcp-gateway
    spec:
      containers:
      - args:
        - mcp_server/gateway.py
        command:
        - /usr/bin/python
        image: mcp-server:prod
        imagePullPolicy: Always
        name: mcp-gateway
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: "200m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /git-repos
          name: mcp-server-git-repos
        - mountPath: /home/mcp/mcp-server-keytab
          name: mcp-server-keytab
        - mountPath: /home/mcp/rhel-config.json
          name: rhel-config
          subPath: rhel-config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mcp-server-git-repos
        persistentVolumeClaim:
          claimName: mcp-server-git-repos
      - name: mcp-server-keytab
        secret:
          secretName: mcp-server-keytab
      - name: rhel-config
        configMap:
          name: rhel-config
