beeai/openshift/deployment-mcp-gitlab.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-gitlab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mcp-gitlab
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mcp-gitlab
        deployment: mcp-gitlab
    spec:
      containers:
      - args:
        - mcp_servers/gitlab_server.py
        command:
        - /usr/bin/python
        image: image-registry.openshift-image-registry.svc:5000/jotnar-prod/mcp-server@sha256:708bd0415631f3a552cb0171aa3f111f581b3d7ab7c19a505e38702845cb8219
        imagePullPolicy: Always
        name: mcp-gitlab
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /git-repos
          name: git-repos
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: git-repos
        persistentVolumeClaim:
          claimName: git-repos
