beeai/openshift/deployment-phoenix.yml
apiVersion: apps/v1
kind: Deployment
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: phoenix
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: phoenix
        deployment: phoenix
    spec:
      containers:
      - env:
        - name: PHOENIX_WORKING_DIR
          value: /mnt/data
        - name: PHOENIX_PORT
          value: "6006"
        image: image-registry.openshift-image-registry.svc:5000/jotnar-prod/phoenix@sha256:6b2cbca1e7b2516b174d3fe844a4462236e4cf6b1b747b941f92a57db29b4390
        imagePullPolicy: IfNotPresent
        name: phoenix
        ports:
        - containerPort: 4317
          protocol: TCP
        - containerPort: 6006
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        # TODO: add limits on cpu and memory.
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/data
          name: phoenix-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: phoenix-data
        persistentVolumeClaim:
          claimName: phoenix-data
