beeai/openshift/deployment-rebase-agent-c10s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebase-agent-c10s
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rebase-agent-c10s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rebase-agent-c10s
        deployment: rebase-agent-c10s
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-30-34-89.us-east-1.compute.internal
      containers:
      - args:
        - agents/rebase_agent.py
        command:
        - /usr/bin/python
        image: 'beeai-agent:c10s'
        imagePullPolicy: Always
        name: rebase-agent-c10s
        ports:
        - containerPort: 8080
          protocol: TCP
        # TODO: add limits on cpu and memory.
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /git-repos
          name: mcp-server-git-repos
        - mountPath: /home/beeai/rhel-config.json
          name: rhel-config
          subPath: rhel-config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      # TODO: this should be reset when we have enough data.
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mcp-server-git-repos
        persistentVolumeClaim:
          claimName: mcp-server-git-repos
      - name: rhel-config
        configMap:
          name: rhel-config
