beeai/openshift/deployment-redis-commander.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis-commander
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis-commander
        deployment: redis-commander
    spec:
      containers:
      - env:
        - name: REDIS_HOSTS
          value: local:valkey:6379
        image: redis-commander:prod
        imagePullPolicy: IfNotPresent
        name: redis-commander
        ports:
        - containerPort: 8081
          protocol: TCP
        # TODO: add limits on cpu and memory.
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
