beeai/openshift/deployment-valkey.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: valkey
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: valkey
        deployment: valkey
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/jotnar-prod/valkey@sha256:93381a084ce82085bf2fb78f97661301577eee0df04fef64a6d14a743b858328
        imagePullPolicy: IfNotPresent
        name: valkey
        ports:
        - containerPort: 6379
          protocol: TCP
        # TODO: add limits on cpu and memory.
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: valkey-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: valkey-data
        persistentVolumeClaim:
          claimName: valkey-data
