beeai/openshift/service-mcp-atlassian.yml
apiVersion: v1
kind: Service
metadata:
  name: mcp-atlassian
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: mcp-atlassian
    deployment: mcp-atlassian
  sessionAffinity: None
  type: ClusterIP
