beeai/openshift/service-mcp-gitlab.yml
apiVersion: v1
kind: Service
metadata:
  name: mcp-gitlab
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: mcp-gitlab
    deployment: mcp-gitlab
  sessionAffinity: None
  type: ClusterIP
