beeai/openshift/service-redis-commander.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: redis-commander
    deployment: redis-commander
  sessionAffinity: None
  type: ClusterIP
