beeai/openshift/service-triage-agent.yml
apiVersion: v1
kind: Service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: triage-agent
    deployment: triage-agent
  sessionAffinity: None
  type: ClusterIP
