beeai/openshift/service-valkey.yml
apiVersion: v1
kind: Service
metadata:
  name: valkey
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 6379-tcp
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: valkey
    deployment: valkey
  sessionAffinity: None
  type: ClusterIP
